[package]
name = "smtp2larkapi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.89"
base64 = "0.22.1"
tokio-rustls = "0.26.0"
rustls-pki-types = "1.9.0"
reqwest = "0.12.8"
serde_json = "1.0.128"
mail-parser = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
rustls = "0.23.14"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = "symbols"